final checks
